examples/modules/valid/app/import_simple.axom
import math.utils

print add(2, 3)
