examples/modules/invalid/non_pub_symbol.axom
from math.utils import internal_mul

print internal_mul(2, 3)
